# nofib

./: .gitignore  .gitlab-ci.yml  README.md  cabal.project  easy.sh  nofib.head
gc/circsim/: Makefile
gc/constraints/: Makefile
gc/fibheaps/: Makefile
gc/fulsom/: Makefile
gc/gc_bench/: Makefile
gc/happy/: Grammar.lhs  Makefile  ProduceCode.lhs  TestInput.hs
gc/mutstore2/: Makefile
gc/spellcheck/: Makefile
imaginary/: Makefile
mk/: boilerplate.mk
nofib-analyse/: CmdLine.hs  Main.hs  Makefile  Slurp.hs  nofib-analyse.cabal
parallel/coins/: Makefile
parallel/gray/: Eval.hs  Geometry.hs  Makefile
parallel/linsolv/: Makefile
parallel/mandel/: Makefile
parallel/minimax/: Makefile
parallel/nbody/: Makefile
parallel/parfib/: Makefile
parallel/partree/: Makefile
parallel/prsa/: Makefile
parallel/queens/: Makefile
parallel/ray/: Makefile
parallel/sumeuler/: Makefile
parallel/transclos/: Main.hs  Makefile  TransClos.hs
parallel/warshall/: Makefile
real/: Makefile
real/ben-raytrace/: Makefile
real/cacheprof/: Main.hs
real/compress/: Lzw.hs
real/compress2/: WriteRoutines.hs
real/smallpt/: Makefile  smallpt.hs
shake/: README.mkd  nofib-run.cabal
shake/compare/: Compare.hs
shake/runner/: Main.hs  RunnerTypes.hs  Utils.hs
shootout/fasta/: Makefile  boot.sh
shootout/k-nucleotide/: Makefile  boot.sh
shootout/reverse-complement/: Main.hs
spectral/: Makefile
spectral/awards/: boot.sh
spectral/calendar/: Main.hs
spectral/dom-lt/: Dom.hs
spectral/fibheaps/: Main.lhs
spectral/lambda/: Main.hs
(+3 files in other folders)
