cabal-version: 2.4
name:          nofib-analyse
version:       0

executable nofib-analyse
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:
    CmdLine
    GenUtils
    Slurp

  ghc-options:
    -fprof-auto
    -rtsopts

  build-depends:
    , array
    , base
    , containers
    , regex-compat
